force-app/main/default/objects/ERP_Integration_Log__c/ERP_Integration_Log__c.object-meta.xml
<CustomObject>
    <label>ERP Integration Log</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>ERP Integration Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>