force-app/main/default/objects/ERP_Integration_Log__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <label>API Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Order</fullName>
            </value>
            <value>
                <fullName>Customer Creation</fullName>
            </value>
            <value>
                <fullName>Salesorder Edit</fullName>
            </value>
            <value>
                <fullName>Customer Name Change</fullName>
            </value>
            <value>
                <fullName>Customer Address Change</fullName>
            </value>
            <value>
                <fullName>Unit Creation</fullName>
            </value>
            <value>
                <fullName>Unit Change</fullName>
            </value>
            <value>
                <fullName>Price Create</fullName>
            </value>
            <value>
                <fullName>Price Change</fullName>
            </value>
            <value>
                <fullName>Cancellation Request Poll</fullName>
            </value>
            <value>
                <fullName>Payment Interface</fullName>
            </value>
            <value>
                <fullName>Unit Inventory</fullName>
            </value>
            <value>
                <fullName>Car Parking Inventory</fullName>
            </value>
            <value>
                <fullName>Unit Ratelist</fullName>
            </value>
            <value>
                <fullName>IRIS Channel Partner</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Receipts API</fullName>
            </value>
            <value>
                <fullName>Customer Creation/Update</fullName>
            </value>
            <value>
                <fullName>Demand API</fullName>
            </value>
            <value>
                <fullName>Interest Ledger</fullName>
            </value>
            <value>
                <fullName>IRIS Booking</fullName>
            </value>
            <value>
                <fullName>IRIS Lead</fullName>
            </value>
            <value>
                <fullName>IRIS Payment</fullName>
            </value>
            <value>
                <fullName>SAP BillDesk</fullName>
            </value>
            <value>
                <fullName>CP Invoice Creation API</fullName>
            </value>
            <value>
                <fullName>CP Receipt API</fullName>
            </value>
            <value>
                <fullName>Outstanding API</fullName>
            </value>
            <value>
                <fullName>User Creation/Delete</fullName>
            </value>
            <value>
                <fullName>BillDesk</fullName>
            </value>
            <value>
                <fullName>Full Copy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>