force-app/main/default/objects/ERP_Integration_Log__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>ERP Integration Logs</relationshipLabel>
    <relationshipName>ERP_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>