force-app/main/default/objects/ERP_Integration_Log__c/fields/Car_Parking__c.field-meta.xml
<CustomField>
    <fullName>Car_Parking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car Parking</label>
    <referenceTo>Car_Parking_Charge__c</referenceTo>
    <relationshipLabel>ERP Integration Logs</relationshipLabel>
    <relationshipName>ERP_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>