force-app/main/default/objects/ERP_Integration_Log__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an active Channel Partner</errorMessage>
        <filterItems>
            <field>Broker__c.Deactivated__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Broker__c</referenceTo>
    <relationshipLabel>ERP Integration Logs</relationshipLabel>
    <relationshipName>ERP_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>