force-app/main/default/objects/ERP_Integration_Log__c/fields/CP_Invoice__c.field-meta.xml
<CustomField>
    <fullName>CP_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Invoice</label>
    <referenceTo>Brokerage_Invoice__c</referenceTo>
    <relationshipLabel>ERP Integration Logs</relationshipLabel>
    <relationshipName>ERP_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>