force-app/main/default/objects/ERP_Integration_Log__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Note</label>
    <referenceTo>Credit_Note__c</referenceTo>
    <relationshipLabel>ERP Integration Logs</relationshipLabel>
    <relationshipName>ERP_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>