force-app/main/default/objects/ERP_Integration_Log__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Timeout Error</fullName>
            </value>
            <value>
                <fullName>Data Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>