force-app/main/default/objects/ERP_Integration_Log__c/fields/INT_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>INT_Batch_Id__c</fullName>
    <label>INT Batch Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>