force-app/main/default/objects/ERP_Integration_Log__c/fields/Interest_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Interest_Waiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interest Waiver</label>
    <referenceTo>Interest_Waiver__c</referenceTo>
    <relationshipLabel>ERP Integration Logs</relationshipLabel>
    <relationshipName>ERP_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>