force-app/main/default/objects/ERP_Integration_Log__c/fields/Rate_List__c.field-meta.xml
<CustomField>
    <fullName>Rate_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate List</label>
    <referenceTo>Rate_List__c</referenceTo>
    <relationshipLabel>ERP Integration Logs</relationshipLabel>
    <relationshipName>ERP_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>