force-app/main/default/objects/ERP_Integration_Log__c/fields/Referral_Credit__c.field-meta.xml
<CustomField>
    <fullName>Referral_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Credit</label>
    <referenceTo>Referral_Credits__c</referenceTo>
    <relationshipLabel>ERP Integration Logs</relationshipLabel>
    <relationshipName>ERP_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>