force-app/main/default/objects/ERP_Integration_Log__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retry Count</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>