force-app/main/default/objects/ERP_Integration_Log__c/fields/RW_Payment_Details__c.field-meta.xml
<CustomField>
    <fullName>RW_Payment_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SAP Receipt</label>
    <referenceTo>RW_Payment_Details__c</referenceTo>
    <relationshipLabel>ERP Integration Logs</relationshipLabel>
    <relationshipName>ERP_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>