force-app/main/default/objects/ERP_Integration_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Value in BROK_COND2 is priority over and above value in BROK_COND</description>
    <inlineHelpText>Value in BROK_COND2 is priority over and above value in BROK_COND</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Not Processed</fullName>
            </value>
            <value>
                <fullName>Reprocessed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>