force-app/main/default/objects/ERP_Integration_Log__c/fields/StatusTxt__c.field-meta.xml
<CustomField>
    <fullName>StatusTxt__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>