force-app/main/default/objects/ERP_Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>API_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Type__c</columns>
    <columns>Project__c</columns>
    <columns>Booking__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Retry_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>