force-app/main/default/objects/ERP_Integration_Log__c/listViews/Cancellation_Requests.listView-meta.xml
<ListView>
    <fullName>Cancellation_Requests</fullName>
    <columns>NAME</columns>
    <columns>API_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Reason__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>API_Name__c</field>
        <operation>equals</operation>
        <value>Cancellation Request Poll</value>
    </filters>
    <label>Cancellation Requests</label>
</ListView>