force-app/main/default/objects/ERP_Integration_Log__c/listViews/Channel_Partner_Error.listView-meta.xml
<ListView>
    <fullName>Channel_Partner_Error</fullName>
    <columns>NAME</columns>
    <columns>API_Name__c</columns>
    <columns>Error_Type__c</columns>
    <columns>Error_Reason__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>API_Name__c</field>
        <operation>equals</operation>
        <value>Channel Partner</value>
    </filters>
    <label>Channel Partner Error</label>
</ListView>