force-app/main/default/objects/ERP_Integration_Log__c/listViews/Rate_List_Error.listView-meta.xml
<ListView>
    <fullName>Rate_List_Error</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>API_Name__c</field>
        <operation>equals</operation>
        <value>Price Change</value>
    </filters>
    <label>Rate List Error</label>
</ListView>