force-app/main/default/objects/ERP_Integration_Log__c/listViews/Salesorder_Log.listView-meta.xml
<ListView>
    <fullName>Salesorder_Log</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Booking__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>API_Name__c</field>
        <operation>equals</operation>
        <value>Sales Order</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failure</value>
    </filters>
    <label>Salesorder Log</label>
</ListView>