force-app/main/default/objects/ERP_Integration_Log__c/listViews/SAP_Brokerage_Module.listView-meta.xml
<ListView>
    <fullName>SAP_Brokerage_Module</fullName>
    <columns>NAME</columns>
    <columns>API_Name__c</columns>
    <columns>CP_Invoice__c</columns>
    <columns>Error_Reason__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>API_Name__c</field>
        <operation>equals</operation>
        <value>CP Invoice Creation API,CP Receipt API</value>
    </filters>
    <label>SAP Brokerage Module</label>
</ListView>